--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 						<h1>SB Photography</h1>
 						<p>Sunil Bishnoi<a href="#"></a></p>
 						<ul class="icons">
-							<li><a href="www.instagram.com/vishnoi___sk" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="www.facebook.com/profile.php?id=100010854725320" class="icon brands fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="sunilvishnoi774@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="http://www.instagram.com/vishnoi___sk" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="http://www.facebook.com/profile.php?id=100010854725320" class="icon brands fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="http://sunilvishnoi774@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 					</header>
 
